# PoetryApp

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/poem/: apps.py  filters.py  models.py  permissions.py  serializers.py  summarizer.py  urls.py  views.py
apps/poem/migrations/: 0001_initial.py
apps/user/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/user/management/commands/: create_users.py
apps/user/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
